# aerie-cli

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose-test.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
api_docs/: README.md
api_docs/source/: aerie_cli.rst  aerie_cli.schemas.rst  aerie_cli.utils.rst  conf.py  index.rst
cli_docs/: README.md  app.md  configurations.md  constraints.md  expansion.md  generate_cli_docs.py  metadata.md  models.md  plans.md  scheduling.md
src/aerie_cli/: __init__.py  __main__.py  __version__.py  aerie_client.py  aerie_host.py  app.py  client.py  models.py  persistent.py  plans.py  scheduling.py
src/aerie_cli/commands/: command_context.py  configurations.py  constraints.py  expansion.py  goals.py  metadata.py  models.py  plans.py  scheduling.py  views.py  workspace.py
src/aerie_cli/schemas/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  pytest_options.py  test_aerie_client.py  test_cli.py  test_dataclasses.py  test_models.py  test_persistent_configuration.py  test_persistent_session.py  test_resource_samples.py
tests/files/: args1.json  args2.json  empty-2day-plan.json  modeling-demo.json
tests/integration_tests/: README.md  conftest.py  full_test.py  test_cli.py  test_configurations.py  test_constraints.py  test_expansion.py  test_goals.py  test_metadata.py  test_models.py  test_parcels.py  test_plans.py  test_scheduling.py
tests/unit_tests/: test_aerie_client.py  test_aerie_host.py  test_persistent_configuration.py  test_persistent_session.py  test_utils.py
(+42 files in other folders)
