[tool.poetry]
name = "aerie-cli"
version = "2.8.0"
description = "A CLI application and Python API for interacting with Aerie."
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/NASA-AMMOS/aerie-cli"
packages = [
    { include = "aerie_cli", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6.8"
click = "^8.0.1"
typer = "^0.4.0"
arrow = "^1.2.2"
requests = "^2.27.1"
rich = "^12.6.0"
attrs = "^22.2.0"
pandas = "^1.1.5"
numpy = "^1.19.5"
appdirs = "^1.4.4"
importlib-metadata = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.1"}
pre-commit = "^2.15.0"
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-bugbear = "^22.9.23"
flake8-docstrings = "^1.6.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.1.0"

[tool.poetry.scripts]
aerie-cli = "aerie_cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
